2005-02-18 Mikhail Khodjaiants
	Remove.
	* cdi/org/eclipse/cdt/debug/core/cdi/ICDIManager.java

2005-02-17 Mikhail Khodjaiants
	Bug 82264: Enhance the Shared Libraries view.
	Removed the core support of the Shared Libraries view.
	* ICSharedLibraryManager.java: removed
	* ICDebugTarget.java
	* ICSharedLibrary.java: removed
	* CSharedLibraryManager.java; removed
	* CDebugTarget.java
	* CSharedLibrary.java: removed

2005-02-16 Mikhail Khodjaiants
	Bug 82264: Enhance the Shared Libraries view.
	Cleanup of the ICModule interface.
	* ICModule.java
	* CModule.java
	
2005-02-15 Mikhail Khodjaiants
	Bug 82264: Enhance the Shared Libraries view.
	Support for the symbols loading operations.
	* CModule.java
	* CoreModelMessages.properties

2005-02-14 Mikhail Khodjaiants
	Bug 82264: Enhance the Shared Libraries view.
	Support for the symbols loading operations.
	* ICModule.java
	* CModule.java
	* CoreModelMessages.properties

2005-02-11 Mikhail Khodjaiants
	Bug 82264: Enhance the Shared Libraries view.
	Added new "getCPU" method to ICModule.
	* ICModule.java
	* CModule.java

2005-02-07 Mikhail Khodjaiants
	Bug 82264: Enhance the Shared Libraries view.
	Core support for the Modules view.
	* ICDebugTarget.java
	* ICModule.java: new
	* CoreModelMessages.properties
	* CDebugTarget.java
	* CModule.java: new
	* CModuleManager.java: new

2005-02-03 Mikhail Khodjaiants
	Fix for bug 84187: "Toggle Watchpoint" and "Toggle Method Breakpoint" don't work with C editor.
	ICWatchpoint should extend ILineBreakpoint to allow watchpoints to be shown in editors.
	* ICWatchpoint.java
	* CWatchpoint.java

2005-02-03 Mikhail Khodjaiants
	Fix for bug 84187: "Toggle Watchpoint" and "Toggle Method Breakpoint" don't work with C editor.
	* CDIDebugModel.java

2005-02-02 Mikhail Khodjaiants
	Fix for bug 84187: "Toggle Watchpoint" and "Toggle Method Breakpoint" don't work with C editor.
	Added new "createWatchpoint" method that accepts position information.
	* CDIDebugModel.java
