@@ -1,3 +1,7 @@
+2005-02-22 Mikhail Khodjaiants
+	Bug 84799: Implement Memory View and renderings with new rendering APIs.
+	* plugin.xml
+
 2005-02-17 Mikhail Khodjaiants
 	Bug 82264: Enhance the Shared Libraries view.
 	Removed the Shared Libraries view.
